<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.RecoverAccountFragment"
    android:fillViewport="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/LinearLayout1">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_back"
            android:paddingTop="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_recover_account"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"
                android:paddingTop="20dp"/>

        </com.google.android.material.appbar.MaterialToolbar>

        <LinearLayout
            android:id="@+id/LinearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="25dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewMensagem"
                android:text="@string/text_info_email_for_recover"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:layout_marginTop="24dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_email"
                android:layout_marginTop="24dp"
                android:textColor="@color/white"/>

            <EditText
                android:id="@+id/editTextEmail"
                style="@style/EditTextTheme"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/text_hint_type_email"
                android:textColorHint="@color/slight_white"
                android:inputType="textEmailAddress"
                android:layout_marginTop="4dp"/>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonEnviar"
                style="@style/ButtonTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_send"
                app:backgroundTint="@null"
                android:layout_marginTop="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="4dp">
            </LinearLayout>

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:indeterminateTint="@color/white"
                android:layout_gravity="center"
                tools:visibility="visible"
                android:visibility="invisible"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>